# pkg/ova-journey-api/ova-journey-api.pb.validate.go
@@ -679,3 +679,161 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = RemoveJourneyRequestV1ValidationError{}
+
+// Validate checks the field values on MultiCreateJourneyRequestV1 with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *MultiCreateJourneyRequestV1) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if len(m.GetJourneys()) < 1 {
+		return MultiCreateJourneyRequestV1ValidationError{
+			field:  "Journeys",
+			reason: "value must contain at least 1 item(s)",
+		}
+	}
+
+	for idx, item := range m.GetJourneys() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return MultiCreateJourneyRequestV1ValidationError{
+					field:  fmt.Sprintf("Journeys[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MultiCreateJourneyRequestV1ValidationError is the validation error returned
+// by MultiCreateJourneyRequestV1.Validate if the designated constraints
+// aren't met.
+type MultiCreateJourneyRequestV1ValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e MultiCreateJourneyRequestV1ValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e MultiCreateJourneyRequestV1ValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e MultiCreateJourneyRequestV1ValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e MultiCreateJourneyRequestV1ValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e MultiCreateJourneyRequestV1ValidationError) ErrorName() string {
+	return "MultiCreateJourneyRequestV1ValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e MultiCreateJourneyRequestV1ValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sMultiCreateJourneyRequestV1.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = MultiCreateJourneyRequestV1ValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = MultiCreateJourneyRequestV1ValidationError{}
+
+// Validate checks the field values on MultiCreateJourneyResponseV1 with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *MultiCreateJourneyResponseV1) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	return nil
+}
+
+// MultiCreateJourneyResponseV1ValidationError is the validation error returned
+// by MultiCreateJourneyResponseV1.Validate if the designated constraints
+// aren't met.
+type MultiCreateJourneyResponseV1ValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e MultiCreateJourneyResponseV1ValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e MultiCreateJourneyResponseV1ValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e MultiCreateJourneyResponseV1ValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e MultiCreateJourneyResponseV1ValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e MultiCreateJourneyResponseV1ValidationError) ErrorName() string {
+	return "MultiCreateJourneyResponseV1ValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e MultiCreateJourneyResponseV1ValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sMultiCreateJourneyResponseV1.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = MultiCreateJourneyResponseV1ValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = MultiCreateJourneyResponseV1ValidationError{}
